@@ -1,7 +1,9 @@
 2021-04-04 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/ports/host/spec.mk.in:
-	  Timeout for host regression tests (RFE #3209).
+	  Timeout for host regression tests (fix bug #3209).
+	* src/SDCClospre.hpp:
+	  Avoid unecessary flush of cout.
 
 2021-04-03 Philipp Klaus Krause <pkk AT spth.de>
 
